add header in home page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   flutter_svg: ^0.23.0+1
   clickabletext: ^0.0.2
+  badges: ^2.0.1
 
 dev_dependencies:
   flutter_test:
