--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.0-262.0.dev <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -39,6 +39,8 @@ dependencies:
   flutter_svg: ^0.23.0+1
   clickabletext: ^0.0.2
   badges: ^2.0.1
+  simple_shadow: ^0.2.0
+
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +68,6 @@ flutter:
   assets:
     - assets/images/
     - assets/svg/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
