--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,7 +47,9 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.smart_hotel"
-        minSdkVersion 16
+
+        // Firebase requirement minSdkVersion from 16 to 19
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
