--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    // Firebase requirement upgrade Kotlin Version from 1.3.50 to 1.5.31
+    ext.kotlin_version = '1.5.31'
     repositories {
         google()
         mavenCentral()
