Add Firebase requirement
Add Firebase requirement

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        
+        // Firebase requirement
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
