--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   simple_shadow: ^0.2.0
   curved_navigation_bar: ^1.0.1
   dotted_line: ^3.1.0
+  switcher_button: ^0.0.4
+  awesome_slider : ^0.1.0
+  flutter_colorpicker: ^0.6.1
 
 
 dev_dependencies:
