--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,40 +27,35 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
+  awesome_slider: ^0.1.0
+  badges: ^2.0.1
+  clickabletext: ^0.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_login: ^2.2.1
-  font_awesome_flutter: ^9.2.0
-  flutter_svg: ^0.23.0+1
-  clickabletext: ^0.0.2
-  badges: ^2.0.1
-  simple_shadow: ^0.2.0
   curved_navigation_bar: ^1.0.1
   dotted_line: ^3.1.0
-  switcher_button: ^0.0.4
-  awesome_slider : ^0.1.0
+  flutter:
+    sdk: flutter
   flutter_colorpicker: ^0.6.1
-
+  flutter_login: ^2.2.1
+  flutter_svg: ^0.23.0+1
+  font_awesome_flutter: ^9.2.0
+  simple_shadow: ^0.2.0
+  switcher_button: ^0.0.4
 
 dev_dependencies:
+  flutter_lints: ^1.0.0
+  flutter_switch: ^0.3.2
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  getwidget: ^2.0.4
+  sleek_circular_slider: ^2.0.1
+  step_progress_indicator: ^1.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -75,10 +70,8 @@ flutter:
     - assets/svg/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -93,10 +86,8 @@ flutter:
         - asset: fonts/Poppins-Medium.otf
         - asset: fonts/Poppins-Bold.otf
           weight: 700
-    - family:  MyFlutterApp
+    - family: MyFlutterApp
       fonts:
         - asset: fonts/MyFlutterApp.ttf
-
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
