--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,11 +42,13 @@ dependencies:
   flutter_svg: ^0.23.0+1
   font_awesome_flutter: ^9.2.0
   get: ^4.3.8
+  simple_shadow: ^0.2.0
+  switcher_button: ^0.0.4
+
+  # firebase
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   google_sign_in: ^5.2.1
-  simple_shadow: ^0.2.0
-  switcher_button: ^0.0.4
 
 dev_dependencies:
   flutter_lints: ^1.0.0
