--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   google_sign_in: ^5.2.1
+  cloud_firestore: ^3.1.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
